Create UI with css
Users should be able to click and operate the program

--- a/index.html
+++ b/index.html
@@ -8,43 +8,49 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="bigger-container">
+        
     <div class="container">
         <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
+            <input type="text" class="input"/>
         </div>
         <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
+            <div class="col">%</div>
+            <div class="col">CE</div>
+            <div class="col">C</div>
+            <div class="col">🔙</div>
         </div>
         <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
+            <div class="col">1/X</div>
+            <div class="col">Xr2</div>
+            <div class="col">2rx</div>
+            <div class="col">/</div>
         </div>
         <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
+            <div class="col">7</div>
+            <div class="col">8</div>
+            <div class="col">9</div>
+            <div class="col">*</div>
         </div>
         <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
+            <div class="col">4</div>
+            <div class="col">5</div>
+            <div class="col">6</div>
+            <div class="col">-</div>
         </div>
         <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">3</div>
+            <div class="col">+</div>
         </div>
+        <div class="row">
+            <div class="col">+/-</div>
+            <div class="col">0</div>
+            <div class="col">.</div>
+            <div class="col">=</div>
+        </div>
+    </div>
     </div>
 </body>
 </html>
