Give all the button id to use in javascript.

--- a/index.html
+++ b/index.html
@@ -15,40 +15,40 @@
             <input type="text" class="input"/>
         </div>
         <div class="row">
-            <div class="col">%</div>
+            <div class="col" id="%">%</div>
             <div class="col">CE</div>
             <div class="col">C</div>
-            <div class="col">🔙</div>
+            <div class="col" id="clear">🔙</div>
         </div>
         <div class="row">
             <div class="col">1/X</div>
             <div class="col">Xr2</div>
             <div class="col">2rx</div>
-            <div class="col">/</div>
+            <div class="col" id="/">/</div>
         </div>
         <div class="row">
-            <div class="col">7</div>
-            <div class="col">8</div>
-            <div class="col">9</div>
-            <div class="col">*</div>
+            <div class="col" id="7">7</div>
+            <div class="col" id="8">8</div>
+            <div class="col" id="9">9</div>
+            <div class="col" id="*">*</div>
         </div>
         <div class="row">
-            <div class="col">4</div>
-            <div class="col">5</div>
-            <div class="col">6</div>
-            <div class="col">-</div>
+            <div class="col" id="4">4</div>
+            <div class="col" id="5">5</div>
+            <div class="col" id="6">6</div>
+            <div class="col" id="-">-</div>
         </div>
         <div class="row">
-            <div class="col">1</div>
-            <div class="col">2</div>
-            <div class="col">3</div>
-            <div class="col">+</div>
+            <div class="col" id="1">1</div>
+            <div class="col" id="2">2</div>
+            <div class="col" id="3">3</div>
+            <div class="col" id="+">+</div>
         </div>
         <div class="row">
             <div class="col">+/-</div>
-            <div class="col">0</div>
-            <div class="col">.</div>
-            <div class="col">=</div>
+            <div class="col" id="0">0</div>
+            <div class="col" id=".">.</div>
+            <div class="col" id="=">=</div>
         </div>
     </div>
     </div>
