--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         
     <div class="container">
         <div class="row">
-            <input type="text" class="input"/>
+            <input type="text" id="input"/>
         </div>
         <div class="row">
-            <div class="col" id="%">%</div>
+            <div class="col" id="percentage">%</div>
             <div class="col">CE</div>
             <div class="col">C</div>
             <div class="col" id="clear">🔙</div>
@@ -24,31 +24,31 @@
             <div class="col">1/X</div>
             <div class="col">Xr2</div>
             <div class="col">2rx</div>
-            <div class="col" id="/">/</div>
+            <div class="col" id="divide">/</div>
         </div>
         <div class="row">
-            <div class="col" id="7">7</div>
-            <div class="col" id="8">8</div>
-            <div class="col" id="9">9</div>
-            <div class="col" id="*">*</div>
+            <div class="col" id="seven">7</div>
+            <div class="col" id="eight">8</div>
+            <div class="col" id="nine">9</div>
+            <div class="col" id="multiply">*</div>
         </div>
         <div class="row">
-            <div class="col" id="4">4</div>
-            <div class="col" id="5">5</div>
-            <div class="col" id="6">6</div>
-            <div class="col" id="-">-</div>
+            <div class="col" id="four">4</div>
+            <div class="col" id="five">5</div>
+            <div class="col" id="six">6</div>
+            <div class="col" id="substract">-</div>
         </div>
         <div class="row">
-            <div class="col" id="1">1</div>
-            <div class="col" id="2">2</div>
-            <div class="col" id="3">3</div>
-            <div class="col" id="+">+</div>
+            <div class="col" id="one">1</div>
+            <div class="col" id="two">2</div>
+            <div class="col" id="three">3</div>
+            <div class="col" id="plus">+</div>
         </div>
         <div class="row">
             <div class="col">+/-</div>
-            <div class="col" id="0">0</div>
-            <div class="col" id=".">.</div>
-            <div class="col" id="=">=</div>
+            <div class="col" id="zero">0</div>
+            <div class="col" id="dot">.</div>
+            <div class="col" id="equals">=</div>
         </div>
     </div>
     </div>
