--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col" id="percentage">%</div>
             <div class="col">CE</div>
-            <div class="col">C</div>
+            <div class="col" id="clear">C</div>
             <div class="col" id="clear">🔙</div>
         </div>
         <div class="row">
