--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="bigger-container">
         
     <div class="container">
+        <input type="text" id="inputMini"/>
         <div class="row">
             <input type="text" id="input"/>
         </div>
